# MiniRt

./: CMakeLists.txt  README.md  a.out  bmp.c  cam_utils.c  check.c  color_utils.c  convertors.c  cylindr.c  ft_printf.h  ft_ssplit.c  get_next_line.c  get_next_line.h  get_next_line.h.gch  get_next_line_utils.c  makefile  map.rt  math_utils.c  miniRT  miniRT.c  miniRT.h.gch  minirt.h  normal_utils.c  objects.c  parser.c  put.c  utils.c
ft_printf/: Makefile  ft_parser.c  ft_printf.c
ft_printf/processor/: print_cap_hex.c  print_chr.c  print_hex.c  print_int.c  print_p.c  print_per.c  print_str.c  print_u.c  valid.c
ft_printf/utils/: ft_atoi.c  ft_printf_utils.c  second_utils.c
includes/: libft.h  minirt.h
libft/: Makefile  ft_atof.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_ssplit.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+7 more)
map/: inter.rt  map.rt  school21.rt  simple_cylinder.rt
mlx/: mlx_window.swift
srcs/: bmp.c  cam_utils.c  check.c  color_utils.c  cylindr.c  ft_atof.c  ft_atoi.c  ft_split_rt.c  ft_ssplit.c  math_utils.c  math_utils_two.c  minirt.c  normal_utils.c  objects.c  parse_obj.c  parse_utils.c  parser.c  put.c  put_utils.c  square.c  utils_two.c
